--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,13 @@ body {
     z-index: 2;
     color: #555555;
 }
+#advantages .box .heures {
+    position: relative;
+    z-index: 2;
+    color: #555555;
+    font-size: 20px;
+    font-weight: bold;
+}
 
 /* LATEST PRODUCT */
 
