--- a/customer/styles/style.css
+++ b/customer/styles/style.css
@@ -401,3 +401,10 @@ body {
 .box .box-footer:after {
     clear: both;
 }
+
+
+/* MON COMPTE STYLE */
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    color: #fff;
+    background-color: #858585;
+}
