--- a/styles/style.css
+++ b/styles/style.css
@@ -401,3 +401,24 @@ body {
 .box .box-footer:after {
     clear: both;
 }
+
+
+/* BOUTON GRIS */
+#btn-primary {
+    color: #fff;
+    background-color: #858585;
+}
+
+/*   CAROUSEL SERVICE STOREFRONT */
+#slider h5 {
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-weight: 700;
+}
+#slider p {
+    font-size: 18px;
+    margin: auto;
+    width: 60%;
+
+}
