--- a/styles/style.css
+++ b/styles/style.css
@@ -423,5 +423,44 @@ body {
     font-size: 18px;
     margin: auto;
     width: 60%;
-
 }
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    right: 15px;
+    bottom: 15px;
+    background: #7b7b7b;
+    transition: display 0.5s ease-in-out;
+    z-index: 99999;
+  }
+  
+  .back-to-top {
+    position: fixed;
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    right: 15px;
+    bottom: 15px;
+    background: #7b7b7b;
+    color: #fff;
+    transition: display 0.5s ease-in-out;
+    z-index: 99999;
+  }
+  
+  .back-to-top i {
+    font-size: 28px;
+    position: absolute;
+    top: 4px;
+    left: 10.5px;
+  }
+  
+  .back-to-top:hover {
+    color: #fff;
+    background: rgb(26 27 27 / 37%);
+    transition: background 0.2s ease-in-out;
+  }
