--- a/admin_area/css/css/style.css
+++ b/admin_area/css/css/style.css
@@ -1,466 +1,165 @@
-/* GENERAL */
-body {
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333333;
-    background: #f0f0f0;
-    overflow-x: hidden;
+body{
+    margin-top: 100px;
 }
 
-/* TOP */
-#top {
-    background: #7a7a7a;
-    padding: 10px 0;
+#wrapper{
+    padding-left: 0px;
 }
-#top .offer {
+
+#page-wrapper{
+    width: 100%;
+    padding: 0;
+    background-color: #f9f9f9;
+}
+
+@media (min-width: 768px){
+    body{
+        margin-top: 50px;
+}
+
+    #wrapper{
+        padding-left: 255px;
+}
+
+    #page-wrapper{
+        padding: 10px;
+}
+}
+
+/*  Sidebar Styles  */
+
+@media (min-width: 768px){
+    .side-nav{
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        width: 255px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        background-color: #222222;
+        padding-bottom: 40px;
+        border-radius: 0;
+    }
+    .side-nav>li>a{
+        width: 255px;
+    }
+    .side-nav>li>a:hover, .side-nav>li>a:focus{
+        outline: none;
+        background-color: #181717 !important;
+    }
+}
+
+.side-nav>li>ul{
+    padding: 0;
+}
+
+.side-nav>li>ul>li>a{
+    padding: 10px 15px 10px 38px;
+    text-decoration: none;
+    color: #bfbfbf;
+    display: block;
+}
+
+.side-nav>li>ul>li>a:hover{
     color: #ffffff;
 }
-#top .offer .btn {
-    text-transform: uppercase;
-    
+
+/*  Custom Color For Panel  */
+
+.huge{
+    font-size: 40px;
+    line-height: normal;
 }
-#top .btn-success {
-    background-color: #858585;
-    border-color: #ffffff;
-    margin-right: 10px;
+
+.panel-green{
+    border-color: #5cd85c;
 }
-@media(max-width: 991px){
-    #top .offer {
-        margin-bottom: 0px;
-    }
-}
-@media(max-width: 991px){
-    #top {
-        font-size: 14px;
-        text-align: center;
-    }
-}
-#top a {
+
+.panel-green>.panel-heading{
     color: #ffffff;
-}
-#top ul.menu {
-    padding-top: 5px;
-    margin: 0px;
-    text-align: right;
-    font-size: 14px;
-    list-style: none;
-}
-@media(max-width: 991px){
-    #top ul.menu{
-        text-align: center;
-    }
-}
-#top ul.menu > li {
-    display: inline-block;
-}
-#top ul.menu > li a {
-    color: #eeeeee;
-}
-#top ul.menu > li + li:before {
-    content: "|\00a0";
-    color: #f7f7f7;
-    padding: 0 5px;
+    background-color: #5cd85c;
 }
 
-/* header styles */
-
-.navbar {
-    background: #ffffff;
-}
-#navbar {
-    min-height: 70px;
-}
-.navbar-collapse .right {
-    float: right;
-    margin-left: 10px;
-}
-.navbar-brand {
-    float: left;
-    padding: 10px 15px;
-    font-size: 18px;
-    line-height: 20px;
-    height: 70px;
-}
-.navbar-brand:hover,
-.navbar-brand:focus {
-    text-decoration: none;
-}
-.navbar ul.nav > li > a {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-}
-.navbar ul.nav > li > a:hover {
-    background-color: #e7e7e7;
-}
-.padding-nav {
-    padding-top: 10px;
-}
-.btn-primary {
-    color: rgb(255, 255, 255);
-    background-color: #e7e7e7;
-    border-color: rgb(65,179,156);
-}
-#search .navbar-form {
-    float: right;
-}
-#search {
-    clear: both;
-    border-top: solid 1px #9adacd;
-    text-align: right;
-}
-#search .navbar-form .input-group .form-control {
-    width: 100%;
-}
-#slider {
-    margin-bottom: 40px;
+.panel-green>a{
+    color: #5cd85c;
 }
 
-/* ADVANTAGE STYLE */
-
-#advantages {
-    text-align: center;
-}
-.box {
-    background: #ffffff;
-    margin: 0 0 30px;
-    border: solid 1px #e6e6e6;
-    box-sizing: border-box;
-    padding: 20px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, .3);
-}
-#advantages .box .icon {
-    position: absolute;
-    font-size: 120px;
-    width: 100%;
-    text-align: center;
-    top: -20px;
-    left: 0px;
-    height: 100%;
-    float: left;
-    color: #dadada;
-    box-sizing: border-box;
-    z-index: 1;
-}
-#advantages .box h3 {
-    position: relative;
-    margin: 0 0 20px;
-    font-weight: 300;
-    text-transform: uppercase;
-    z-index: 2;
-}
-#advantages .box h3 a {
-    color: #4fbfa8;
-}
-#advantages .box h3 a:hover {
-    text-decoration: none;
-}
-#advantages .box p {
-    position: relative;
-    z-index: 2;
-    color: #555555;
-}
-#advantages .box .heures {
-    position: relative;
-    z-index: 2;
-    color: #555555;
-    font-size: 20px;
-    font-weight: bold;
+.panel-green>a:hover{
+    color: #3d8c3d;
 }
 
-/* LATEST PRODUCT */
-
-
-#hot h2 {
-    font-size: 36px;
-    font-weight: 400;
-    color: #4fbfa8;
-    text-align: center;
-    text-transform: uppercase;
-}
-#content {
-    padding-left: 25px;
-}
-#content .col-sm-6 {
-    width: 25%;
-}
-.single {
-    width: 290px;
-}
-@media(max-width:768px){
-    .single {
-        width: 60%;
-        margin: 0 auto;
-    }
-}
-#content .product {
-    background: #ffffff;
-    border: solid 1px #e6e6e6;
-    margin-bottom: 30px;
-    box-sizing: border-box;
-}
-#content .product .text {
-    padding: 5px 5px 0px;
-}
-#content .product .text p.price {
-    font-size: 18px;
-    text-align: center;
-    font-weight: 400;
-}
-#content .product .text .button {
-    text-align: center;
-    clear: both;
-}
-#content .product .text .button .btn {
-    margin-bottom: 10px;
-}
-#content .product .text h3 {
-    text-align: center;
-    font-size: 20px;
-}
-#content .product .text h3 a {
-    color: rgb(85, 85, 85);
+.panel-orange{
+    border-color: #f0ad4e;
 }
 
-/* BREADCRUMB STYLE */
+.panel-orange>.panel-heading{
+    color: #ffffff;
+    background-color: #f0ad4e;
+}
 
-.breadcrumb {
-    padding: 8px 15px;
-    margin-bottom: 20px;
-    background: #ffffff;
+.panel-orange>a{
+    color: #f0ad4e;
+}
+
+.panel-orange>a:hover{
+    color: #ba8539;
+}
+
+.panel-red{
+    border-color: #d9534f;
+}
+
+.panel-red>.panel-heading{
+    color: #ffffff;
+    background-color: #d9534f;
+}
+
+.panel-red>a{
+    color: #d9534f;
+}
+
+.panel-red>a:hover{
+    color: #8d4341;
+}
+
+/*  Admin Profile Styling  */
+
+.panel-body{
     border-radius: 5px;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
-}
-.breadcrumb > li + li:before {
-    content: ">\00a0";
-    color: #cccccc;
-}
-@media(max-width:991px) {
-    .breadcrumb {
-        padding: 8px 0px;
-        text-align: center;
-    }
 }
 
-/* SIDEBAR STYLE */
+.thumb-info{
+    position: relative;
+}
 
-#content .panel.sidebar-menu {
-    box-sizing: border-box;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
+.rounded{
+    border-radius: 10px;
 }
-#content .panel.sidebar-menu ul.nav.category-menu {
-    margin-bottom: 0px;
+
+hr{
+    border: 0;
+    height: 1px;
+    margin: 10px 0 10px 0;
 }
-#content .panel.sidebar-menu ul.nav.category-menu li a {
-    text-transform: uppercase;
+
+hr.dotted{
+    border-bottom: 1px #dddddd dotted;
+    height: 0px;
+    margin: 10px 0 10px 0;
+}
+
+
+
+.widget-content-expanded{
+    font-size: 15px;
+}
+
+.widget-content-expanded span{
     font-weight: 600;
 }
-#content .panel.sidebar-menu h3 {
-    padding: 5px 0px;
-    margin: 0px;
+
+.widget-content-expanded i{
+    color: #0088cc;
+    margin-right: 5px;
 }
 
-/* BOUTIQUE STYLE */
-@media(max-width: 768px) {
-    .center-responsive {
-        width: 70%;
-        margin: 0px auto;
-    }
-}
-@media(max-width: 550px) {
-    .center-responsive {
-        width: 95%;
-        margin: 0px auto;
-    }
-}
-
-
-
-
-
-
-
-
-/* FOOTER SECTION */
-#footer {
-    background: #e0e0e0;
-    padding: 20px 6;
-    padding-top: 10px;
-}
-#footer a {
-    color: #999999;
-    padding: 20px 6;
-    text-decoration: none;
-}
-#footer a:hover {
-    color: #666666;
-}
-#footer ul {
-    list-style: none;
-    padding-left: 6px;
-}
-#footer .social {
-    text-align: left;
-}
-#footer .social a {
-    margin: 0px 10px 0px 0px;
-    display: inline-block;
-    color: #ffffff;
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
-    line-height: 30px;
-    font-size: 15px;
-    text-align: center;
-    vertical-align: bottom;
-    background: #555555;
-    text-decoration: none;
-}
-#footer .social a:hover{
-    color: #dedede;
-    background: #777777;
-}
-
-/* COPYRIGHT STYLE */
-#copyright {
-    background: #333333;
-    color: #cccccc;
-    padding: 20px 0px;
-    font-size: 12px;
-}
-#copyright p {
-    margin: 0px;
-}
-#copyright p a {
-    color: #cccccc;
-    text-decoration: none;
-}
-#copyright p a:hover {
-    color: #ffffff;
-}
-
-
-/* BOUTIQUE  STYLE  */
-
-@media(max-width:768px) {
-    .center-responsive {
-        width: 70%;
-        margin: 0px auto;
-    }
-}
-@media(max-width:550px) {
-    .center-responsive {
-        width: 95%;
-        margin: 0px auto;
-    }
-}
-
-/* DETAILS PRODUIT STYLE */
-
-#content #productMain {
-    margin-bottom: 30px;
-}
-#content #productMain .price {
-    font-size: 30px;
-    font-weight: 300;
-    text-align: center;
-    margin-top: 30px;
-}
-#content #mainImage {
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .7);
-}
-#content #thumbs a {
-    display: block;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
-    border: 2px solid transparent;
-}
-
-
-/* MON PANIER STYLE */
-#content #panier .table tbody tr td img {
-    width: 50px;
-    float: left;
-}
-#content #panier .table tbody tr td input {
-    width: 50px;
-    float: left;
-}
-#content #panier .table tbody tr td {
-    vertical-align: middle;
-}
-#content #panier .table tfoot {
-    font-size: 18px;
-}
-.box .box-footer {
-    background-color: #f7f7f7;
-    padding: 20px;
-    border: 1px solid #eeeeee;
-}
-.box .box-footer:before, 
-.box .box-footer:after {
-    content: "";
-    display: table;
-}
-.box .box-footer:after {
-    clear: both;
-}
-
-
-/* BOUTON GRIS */
-#btn-primary {
-    color: #fff;
-    background-color: #858585;
-}
-
-/*   CAROUSEL SERVICE STOREFRONT */
-#slider h5 {
-    font-size: 30px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    font-weight: 700;
-}
-#slider p {
-    font-size: 18px;
-    margin: auto;
-    width: 60%;
-}
-
-.back-to-top {
-    position: fixed;
-    display: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
-    right: 15px;
-    bottom: 15px;
-    background: #7b7b7b;
-    transition: display 0.5s ease-in-out;
-    z-index: 99999;
-  }
-  
-  .back-to-top {
-    position: fixed;
-    display: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    right: 15px;
-    bottom: 15px;
-    background: #7b7b7b;
-    color: #fff;
-    transition: display 0.5s ease-in-out;
-    z-index: 99999;
-  }
-  
-  .back-to-top i {
-    font-size: 28px;
-    position: absolute;
-    top: 4px;
-    left: 10.5px;
-  }
-  
-  .back-to-top:hover {
-    color: #fff;
-    background: rgb(26 27 27 / 37%);
-    transition: background 0.2s ease-in-out;
-  }
