debut dashboard dynamique

--- a/admin_area/css/css/style.css
+++ b/admin_area/css/css/style.css
@@ -64,6 +64,13 @@ body{
     color: #ffffff;
 }
 
+.sess-info{
+    padding: 10px 15px 10px 38px;
+    text-decoration: none;
+    color: #bfbfbf;
+    display: block;
+}
+
 /*  Custom Color For Panel  */
 
 .huge{
