--- a/admin_area/css/css/login.css
+++ b/admin_area/css/css/login.css
@@ -1,28 +1,30 @@
 body{
     padding-top: 10%;
-    background-color: lightseagreen;
+    background-image: url("../../admin_images/login.jpeg");
 }
 
 .form-login{
     max-width: 350px;
-    padding: 40px;
+    padding: 20px;
     border: 3px #2d2d2e groove;
     border-radius: 20px;
-    background: #c2c2c2;
+    background: #393939;
     margin: 0 auto;
-    box-shadow: rgba(29, 28, 28, 0.7) 13px 13px 10px;
+    margin-top: 150px;
+    box-shadow: rgba(29, 28, 28, 0.7) 10px 1px 10px;
 }
 
 .form-login .form-login-heading{
-    color: #000000;
+    color: #ffffff;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 .form-login input[type="text"] {
-    background: #e2dfdf;
+    background: #636161;
 }
 .form-login input[type="password"] {
-    background: #e2dfdf;
+    background: #636161;
 }
 
 .btn-gris {
@@ -43,10 +45,12 @@ body{
     margin-bottom: 5px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+    color: white;
 }
 
 .form-login input[type="password"]{
     margin-bottom: 10px;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
+    color: white;
 }
